data/derived/fa15/progs/unify/prog4201.ml.out
Characters 74-94:
  else (mulByDigit (i-1) l) + (bigAdd l l);;
       ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
